--- a/components/RadSens/dosimeter.yaml
+++ b/components/RadSens/dosimeter.yaml
@@ -1,6 +1,3 @@
-# https://gist.github.com/denpamusic/863a08c69d2fd6fb33b9ab8095e13f16
-# https://github.com/med-lasers/Dosimeter_RadSens_NarodMon
-
 # TFT Driver	ST7789
 # TFT_MISO	N/A
 # TFT_MOSI	19
@@ -23,7 +20,7 @@
 ##  | 21|  sda     |#|     | 37|         ##
 ##  | 22|  scl     |#|     | 38|         ##
 ##  | 17| puls     |#|     |SVN|         ##
-##  |  2| speaker  |#|     | 32|         ##
+##  |  2| speaker  |#|     | 32| RadSens ##
 ##  | 15|          |#|     | 33|         ## 
 ##  | 13|          |#|     | 25|         ##
 ##  | 12|          |#|     | 26|         ##
@@ -142,7 +139,7 @@ font:
 image:
   - file: mdi:radioactive
     id: i_radioactive
-    resize: 100x100 
+    resize: 70x70 
 
   - file: mdi:wifi-strength-1
     id: i_wifi1
@@ -251,16 +248,16 @@ sensor:
         unit_of_measurement: μR/h
         state_class: measurement
         icon: mdi:radioactive
-
       - name: "Firmware"
         accuracy_decimals: 0
         icon: mdi:folder-arrow-up-outline
         
       - name: "Current impulse"
-        accuracy_decimals: 1
+        accuracy_decimals: 0
         unit_of_measurement: imp
         state_class: measurement
         icon: mdi:pulse
+        id: imp
 
       - name: "Max impulse"
         accuracy_decimals: 1
@@ -413,21 +410,22 @@ display:
       if (id(led).state) {
         it.image(170, 105, id(i_led), blue);
       } 
+      it.printf(0, 100, id(font2), white, "%0.0f imp", id(imp).state);
       if (id(hvg).state) {
-        it.image(205, 105, id(i_flash), yellow);
+        it.image(135, 0, id(i_flash), yellow);
       } 
       if (id(speaker).state) {
-        it.image(135, 105, id(i_volume_high), white);
+        it.image(205, 105, id(i_volume_high), white);
       } 
       else {
-        it.image(135, 105, id(i_volume_off), white);
+        it.image(205, 105, id(i_volume_off), white);
       }
       if (id(wifi_id).is_connected()) {
-        it.strftime(21, 0, id(font2),"%H %M", id(sntp_time).now());
+        it.strftime(0, 0, id(font2),"%H %M", id(sntp_time).now());
         static int i = 0;
         i++;
         if ((i % 2) == 0) 
-          it.print(60, 0, id(font2),":");
+          it.print(39, 0, id(font2),":");
       }
       uint16_t var = (id(WiFiP).state);
       switch (var) {
@@ -452,20 +450,22 @@ display:
 
       uint16_t D = (id(radD).state);
       switch (D) {
-        case 0 ... 20: it.printf(100, 35, id(font0), green, "%3.0f μR/h", id(radD).state); break;
-        case 21 ... 40: it.printf(100, 35, id(font0), lgreen, "%3.0f μR/h", id(radD).state); break;
-        case 41 ... 60: it.printf(100, 35, id(font0), yellow, "%3.0f μR/h", id(radD).state); break;
-        case 61 ... 1000: it.printf(100, 35, id(font0), red, "%3.0f μR/h", id(radD).state); break;
-        default: it.printf(100, 35, id(font0), blue, "%3.0f μR/h", id(radD).state); break;
+        case 0 ... 20: it.printf(70, 35, id(font0), green, "D: %3.0f μR/h", id(radD).state); break;
+        case 21 ... 40: it.printf(70, 35, id(font0), lgreen, "D: %3.0f μR/h", id(radD).state); break;
+        case 41 ... 60: it.printf(70, 35, id(font0), yellow, "D: %3.0f μR/h", id(radD).state); break;
+        case 61 ... 999: it.printf(70, 35, id(font0), red, "D: %3.0f μR/h", id(radD).state); break;
+        case 1000 ... 32000: it.printf(70, 35, id(font0), red, "D: %3.0f mR/h", (id(radD).state)/1000); break;
+        default: it.printf(70, 35, id(font0), blue, "D: %3.0f μR/h", id(radD).state); break;
       }
 
       uint16_t S = (id(radS).state);
       switch (S) {
-        case 0 ... 20: it.printf(100, 70, id(font0), green, "%3.0f μR/h", id(radS).state); break;
-        case 21 ... 40: it.printf(100, 70, id(font0), lgreen, "%3.0f μR/h", id(radS).state); break;
-        case 41 ... 60: it.printf(100, 70, id(font0), yellow, "%3.0f μR/h", id(radS).state); break;
-        case 61 ... 1000: it.printf(100, 70, id(font0), red, "%3.0f μR/h", id(radS).state); break;
-        default: it.printf(100, 70, id(font0), blue, "%3.0f μR/h", id(radS).state); break;
+        case 0 ... 20: it.printf(70, 70, id(font0), green, "S: %3.0f μR/h", id(radS).state); break;
+        case 21 ... 40: it.printf(70, 70, id(font0), lgreen, "S: %3.0f μR/h", id(radS).state); break;
+        case 41 ... 60: it.printf(70, 70, id(font0), yellow, "S: %3.0f μR/h", id(radS).state); break;
+        case 61 ... 999: it.printf(70, 70, id(font0), red, "S: %3.0f μR/h", id(radS).state); break;   
+        case 1000 ... 32000: it.printf(70, 35, id(font0), red, "S: %3.0f mR/h", (id(radS).state)/1000); break;    
+        default: it.printf(70, 70, id(font0), blue, "S: %3.0f μR/h", id(radS).state); break;
       }
 
 time:
@@ -478,4 +478,3 @@ web_server:
   auth:
     username: !secret web_user
     password: !secret web_pass   
-
