--- a/components/RadSens/dosimeter.yaml
+++ b/components/RadSens/dosimeter.yaml
@@ -299,6 +299,7 @@ sensor:
 binary_sensor:
   - platform: template
     name: "charge"
+    device_class: battery_charging
     lambda: |-
       if (id(vbus).state > 0) {
         return true;
