--- a/components/RadSens/dosimeter.yaml
+++ b/components/RadSens/dosimeter.yaml
@@ -298,7 +298,7 @@ sensor:
 
 binary_sensor:
   - platform: template
-    name: "charge"
+    name: "${name} charge"
     device_class: battery_charging
     lambda: |-
       if (id(vbus).state > 0) {
@@ -320,7 +320,7 @@ binary_sensor:
         id: bled
 
   - platform: status
-    name: "API HA"
+    name: "${name} API HA"
     id: system_status  
 
   - platform:  gpio
