--- a/components/cg_anem/conf.yaml
+++ b/components/cg_anem/conf.yaml
@@ -1,7 +1,7 @@
 external_components:
   - source: github://ananyevgv/esphome-components/
     components: [ cg_anem ]
-
+    refresh: 0s
 sensor:
 - platform: cg_anem
   ambient_temperature:
