--- a/components/RadSens/dosimeter.yaml
+++ b/components/RadSens/dosimeter.yaml
@@ -13,7 +13,6 @@
 # BUTTON2	0
 # ADC Power	14
 
-
 ###########################################
 ##                                       ##
 ##  |GND|          |#|     |3.3|         ##   
@@ -39,24 +38,23 @@ esphome:
   name: "${name}"
   on_boot:
     then:
-      - switch.turn_on: hvg
       - switch.turn_off: led
       - switch.turn_on: backlight
-      - switch.turn_on: radsens_on
       - switch.turn_off: speaker
+
 esp32:
   board: featheresp32
   flash_size: 16MB
-  
-external_components:
-  - source: github://ananyevgv/esphome-components
-    components: [ lilygo_t_battery ]
-    refresh: 0s
+  framework:
+    type: arduino
 
-  - source: github://krbaker/esphome-radsens
+external_components:
+  - source: github://krbaker/esphome-radsens@v1.0.0
     components: [ radsens ]
     refresh: 600s
 
+packages:
+  lilygo_t_battery: !include packages/lilygo_t_battery.yaml
 psram:
   mode: octal
   speed: 80MHz
@@ -78,9 +76,9 @@ logger:
 i2c:
   sda: 21
   scl: 22
-  scan: true
-  frequency: 400kHz
+  scan: True
 
+  
 spi:
   clk_pin: GPIO18
   mosi_pin: GPIO19
@@ -248,23 +246,9 @@ sensor:
     firmware_version:
       name: "Firmware"
 
-  - platform: lilygo_t_battery
-    update_interval: 5s
-    voltage:
-      name: "${name} battery Voltage"
-      id: vbatt
-    bus_voltage:
-      name: "${name} bus Voltage"
-      id: vbus
-    level:
-      name: "${name} battery level"
-      id: batt
-
   - platform: internal_temperature
     name: "${name} ESP32 T"
-  - platform: esp32_hall
-    name: "${name} hall Sensor"
-    update_interval: 60s
+
 
   - platform: wifi_signal
     name: "${name} Wifi"
@@ -283,17 +267,6 @@ sensor:
  
 
 binary_sensor:
-  - platform: template
-    name: "${name} charge"
-    device_class: battery_charging
-    lambda: |-
-      if (id(vbus).state > 0) {
-        return true;
-      } else {
-        return false;
-      }
-
-
   - platform: status
     name: "${name} API HA"
     id: system_status  
@@ -355,6 +328,7 @@ switch:
     control_high_voltage:
       name: "High Voltage Generator"
       id: hvg
+      restore_mode: RESTORE_DEFAULT_ON
     control_low_power:
       name: "low power mode"
   - platform: gpio
@@ -377,11 +351,13 @@ switch:
       drive_strength: 40mA
     name: radsens   
     id: radsens_on
+    restore_mode: RESTORE_DEFAULT_ON
     icon: mdi:radioactive-off
 
 display:
   - platform: ili9xxx #st7789v
     model: ST7789V #TTGO TDisplay 135x240
+    id: rad_display
     cs_pin: GPIO5
     dc_pin: GPIO16
     reset_pin: GPIO23
@@ -422,21 +398,6 @@ display:
         case 50 ... 74: it.image(170, 0, id(i_wifi3), lgreen); break;
         case 75 ... 100: it.image(170, 0, id(i_wifi4), green); break;
         default: it.image(170, 0, id(i_wifioff), red); break;
-      }
-
-      if (id(vbus).state) {
-        it.image(205, 0, id(i_battery_charging), green);
-      }
-      else {
-        uint16_t bat = (id(batt).state);
-        switch (bat) {
-          case 0 ... 9: it.image(205, 0, id(i_battery_off_outline), tred); break;
-          case 10 ... 19: it.image(205, 0, id(i_battery_outline), red); break;
-          case 20 ... 49: it.image(205, 0, id(i_battery_low), yellow); break;
-          case 50 ... 79: it.image(205, 0, id(i_battery_medium), lgreen); break;
-          case 80 ... 100: it.image(205, 0, id(i_battery_high), green); break;        
-          default: it.image(205, 0, id(i_battery_high), blue); break;
-        }
       }
 
       it.image(0, 35, id(i_radioactive), yellow);
@@ -483,6 +444,20 @@ display:
         default: it.printf(70, 70, id(font0), blue, "C %3.0f μR/h", id(radS).state); break;
       }
 
+      if (id(vbus).state) {
+        it.image(205, 0, id(i_battery_charging), green);
+      }
+      else {
+        uint16_t bat = (id(batt).state);
+        switch (bat) {
+          case 0 ... 9: it.image(205, 0, id(i_battery_off_outline), tred); break;
+          case 10 ... 19: it.image(205, 0, id(i_battery_outline), red); break;
+          case 20 ... 49: it.image(205, 0, id(i_battery_low), yellow); break;
+          case 50 ... 79: it.image(205, 0, id(i_battery_medium), lgreen); break;
+          case 80 ... 100: it.image(205, 0, id(i_battery_high), green); break;        
+          default: it.image(205, 0, id(i_battery_high), blue); break;
+        }
+      }
 time:
   - platform: sntp
     id: sntp_time
@@ -490,6 +465,7 @@ time:
 web_server:
   version: 3  
   port: 80
+  local: true
   auth:
     username: !secret web_user
     password: !secret web_pass   
