--- a/components/cg_anem/cg_anem.yaml
+++ b/components/cg_anem/cg_anem.yaml
@@ -5,7 +5,12 @@
 #    vars:
 #      air_duct: 91.6 # 91.6 = расчитанное сечение воздуховода 108мм где стоит анемометр в метрах сантиметрах 122.71 для 125
 ##################################################################################
-# add TIME!!!!!!
+# add 
+#time:
+#  - platform: .....
+#i2c:
+#  sda:
+#  scl: 
 ##################################################################################
 
 external_components:
