--- a/components/mq/mq4.yaml
+++ b/components/mq/mq4.yaml
@@ -9,10 +9,8 @@
 #      RationClearAir: 4.4
 #      R2PCB: 10
 #      MQBinarry: D8
+#      Voltage_Resolution: 3.3
 #-------------------------------------------
-
-
-
 
 
 #-------------------------------------------
@@ -32,6 +30,7 @@ sensor:
     pin: $MQPin
     r0: $RationClearAir
     rl: $R2PCB
+    vr: $Voltage_Resolution
     update_interval: 30s
     sensor_lpg:
       name: Sensor LPG
